recursion.cons.nth.Nth.scala.error
Erreur de compilation :
Nth:6: error: type mismatch;
 found   : Unit
 required: Int
    if(n==0)
    ^